# python-package-template

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.cfg
tests/: test1.py
