[metadata]
name = PACKAGE NAME
version = 0.0.1
author = Anthony Wynne
author_email = 12174019+ant358@users.noreply.github.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ant358/python-package-template/
project_urls =
    Bug Tracker = https://github.com/ant358/python-package-template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    ipykernel==5.5.3
    numpy==1.20.2
    packaging==20.9
    pandas==1.2.4
    pytest==6.2.4
    python-decouple==3.4
    requests==2.25.1
    SQLAlchemy==1.4.14
    urllib3==1.26.4

[options.packages.find]
where = src

[options.package_data]
# src/package/config = *.ini
